# fake-music-files

./: .cproject  .gitignore  .project  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
doc/: manpage.rst
src/: CDDB.cpp  CDDB.h  CDDBParser.cpp  CDDBParser.h  Context.cpp  Context.h  Dir.cpp  Dir.h  EncodingDetector.cpp  EncodingDetector.h  File.cpp  File.h  Launcher.cpp  Launcher.h  MusicFileCreator.cpp  MusicFileCreator.h  MusicFilesGenerator.cpp  MusicFilesGenerator.h  Options.cpp  Options.h  Tracer.cpp  Tracer.h  TrackInfo.cpp  TrackInfo.h  Utf8Converter.cpp  Utf8Converter.h  main.cpp
template/: template.flac
